
syntax = "proto3";

option csharp_namespace = "bbnApp.Protos";

package DepartMentGrpc;

//定义Author服务
service DepartMentGrpc {
  //获取部门清单
  rpc GetDepartMentList (DepartMentSearchRequest) returns (DepartMentSearchResponse);
  //获取部门清单（树形结构）
  rpc GetDepartMentTree (DepartMentTreeRequest)returns (DepartMentTreeResponse);
  //获取部门信息
  rpc GetDepartMentInfo (DepartMentInfoRequest) returns (DepartMentInfoResponse);
  //部门信息提交
  rpc SaveDepartMent (DepartMentSaveRequest) returns (DepartMentSaveResponse);
  //部门状态变更
  rpc StateDepartMent (DepartMentStateRequest) returns (DepartMentStateResponse);
}

// 树形对象
message DepartMentTreeItem {
    string Id = 1; // ID
    string PId = 2; // 上级ID
    string Name = 3; // 名称
    string Tag = 4; // Tag
    bool IsLeaf = 5; // 是否为叶子节点
    bool IsLock=6;//锁定
    repeated DepartMentTreeItem SubItems = 7; // 子节点
}

// 部门信息数据传输对象
message DepartMentInfo {
    string Yhid = 1; // 用户组ID
    string DepartMentId = 2; // 部门ID
    string PDepartMentId = 3; // 上级部门ID
    string DepartMentName = 4; // 部门名称
    string DepartMentCode = 5; // 部门代码
    int32 DepartMentIndex = 6; // 部门序号
    string DepartMentLocation = 7; // 部门位置
    string DepartMentDescription = 8; // 部门介绍
    int32 IsLock = 9; // 停用状态
    string LockTime = 10; // 停用时间
    string LockReason = 11; // 停用原因
    string CompanyId = 12; // 机构ID
    string ReMarks = 13; // 备注信息
    int32 IdxNum = 14; // 序号
}

// 部门树请求对象
message DepartMentTreeRequest {
    string CompanyId = 1; // 机构ID
}

// 部门树返回对象
message DepartMentTreeResponse {
    bool Code = 1; // 状态
    string Message = 2; // 消息
    repeated DepartMentTreeItem Items = 3; // 树形部门项
}

// 部门清单请求对象
message DepartMentSearchRequest {
    string DepartMentName = 1; // 部门名称
    string CompanyId = 2; // 公司代码
}

// 部门清单返回对象
message DepartMentSearchResponse {
    bool Code = 1; // 状态
    string Message = 2; // 消息
    repeated DepartMentInfo Items = 3; // 部门清单
}

message DepartMentInfoRequest{
    string DepartMentId = 1; // 部门ID
    string CompanyId = 2; //机构ID
}

// 部门信息返回对象
message DepartMentInfoResponse {
    bool Code = 1; // 状态
    string Message = 2; // 消息
    DepartMentInfo Item = 3; // 部门信息对象
}

// 部门提交请求对象
message DepartMentSaveRequest {
    DepartMentInfo Item = 1; // 部门信息对象
}

// 部门提交返回对象
message DepartMentSaveResponse {
    bool Code = 1; // 状态
    string Message = 2; // 消息
    DepartMentInfo Item = 3; // 部门信息对象
}

// 部门状态请求对象
message DepartMentStateRequest {
    string Type = 1; // 类型
    string DepartMentId = 2; // 部门ID
    string Reason=3; // 停用原因
    string CompanyId=4; // 停用原因
}

// 部门状态返回对象
message DepartMentStateResponse {
    bool Code = 1; // 状态
    string Message = 2; // 消息
    DepartMentInfo Item = 3; // 部门信息对象
}
